--- a/index.html
+++ b/index.html
@@ -5,8 +5,217 @@
     <title>HTML Academy: Девайс</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
-
+    <header class="page-header">
+      <img class="logo" src="" alt="Логотип интернет-магазина Device">
+<nav class="navigation">
+  <ul class="navigation-user">
+    <li class="navigation-item-first-nav">
+      <a class="navigation-link" href="#">Поиск</a>
+      <input class="search-nav" type="text" placeholder="Текст поиска">
+      <button class="search-header-button" type="button">
+        <span>Найти</span>
+      </button>
+    </li>
+    <li class="navigation-item-first-nav">
+      <a class="navigation-link" href="#">Войти</a>
+    </li>
+    <li class="navigation-item-first-nav">
+      <a class="navigation-link" href="#">Сравнить</a>
+    </li>
+    <li class="navigation-item-first-nav">
+      <a class="navigation-link" href="#">Корзина</a>
+    </li>
+  </ul>
+  <ul class="navigation-list">
+    <li class="navigation-item">
+      <a class="navigation-link" href="#">Каталог товаров</a>
+    </li>
+    <li class="navigation-item">
+      <a class="navigation-link" href="#">Доставка</a>
+    </li>
+    <li class="navigation-item">
+      <a class="navigation-link" href="#">Гарантия</a>
+    </li>
+    <li class="navigation-item">
+      <a class="navigation-link" href="#">Контакты</a>
+    </li>
+  </ul>
+</nav>
+    </header>
+    <main class="main-index">
+<h1 class="visually-hidden">Интернет-магазин Device</h1>
+<article class="first-banner">
+  <section class="first-banner-gallery">
+    <img class="slider-img" src="" alt="Дрон модель 123" width="560" height="560">
+    <button class="slider-button slider-prev" type="button">
+      <span class="visually-hidden">Предыдущее фото</span>
+    </button>
+    <button class="slider-button slider-prev" type="button">
+      <span class="visually-hidden">Следующее фото</span>
+    </button>
+    <ol class="slider-pagination">
+      <li class="slider-pagination-item">
+        <button class="slider-pagination-button slider-pagination-curent">
+          <span class="visually-hidden">1 фото</span>
+        </button>
+        <li class="slider-pagination-item">
+        <button class="slider-pagination-button slider-pagination-curent">
+          <span class="visually-hidden">2 фото</span>
+        </button>
+        <li class="slider-pagination-item">
+        <button class="slider-pagination-button slider-pagination-curent">
+          <span class="visually-hidden">3 фото</span>
+        </button>
+      </li>
+    </ol>
+  </section>
+<section class="first-banner-description">
+  <ol class="first-banner-description-list">
+    <li class="first-banner-description-item">
+      <span class="first-banner-number">01</span>
+      <span class="list-item-heading">Порхает как бабочка,
+        жалит как пчела!</span>
+        <p class="first-banner-item-description">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.
+        </p>
+        <a class="item-link" href="item.html">Подробнее</a>
+        <p class="item-advantages"><span class="advantages-number">800 М</span><br>Дальность полета</p>
+        <p class="item-advantages"><span class="advantages-number">50 м</span><br>Радиус поражения</p>
+    </li>
+    <li class="first-banner-description-item">
+      <span class="first-banner-number">02</span>
+      <span class="list-item-heading">Рыбный текст</span>
+        <p class="first-banner-item-description">Рыбный текст</p>
+        <a class="item-link" href="item.html">Подробнее</a>
+        <p class="item-advantages"><span class="advantages-number">800 М</span><br>Дальность полета</p>
+        <p class="item-advantages"><span class="advantages-number">50 м</span><br>Радиус поражения</p>
+    </li>
+    <li class="first-banner-description-item">
+      <span class="first-banner-number">03</span>
+      <span class="list-item-heading">Рыбный текст</span>
+        <p class="first-banner-item-description">Рыбный текст</p>
+        <a class="item-link" href="item.html">Подробнее</a>
+        <p class="item-advantages"><span class="advantages-number">800 М</span><br>Дальность полета</p>
+        <p class="item-advantages"><span class="advantages-number">50 м</span><br>Радиус поражения</p>
+    </li>
+  </ol>
+  <button class="description-button slider-prev" type="button">
+    <span class="visually-hidden">Предыдущий элемент</span>
+  </button>
+  <button class="description-button slider-prev" type="button">
+    <span class="visually-hidden">Следующий элемент</span>
+  </button>
+</section>
+</article>
+<article class="tag-cloud">
+<ul class="tag-cloud-list">
+<li class="tag-cloud-item">
+  <p><a href="virtualnaya-realnost.html">Виртуальная реальность</a></p>
+  <img src="" alt="Очки виртуальной реальности">
+</li>
+<li class="tag-cloud-item">
+  <p><a href="monopody.html">Моноподы для селфи</a></p>
+  <img src="" alt="Моноподы для селфи">
+</li>
+<li class="tag-cloud-item">
+  <p><a href="ekshn-kamery.html">Экшн-камеры</a></p>
+  <img src="" alt="Экшн-камеры">
+</li>
+<li class="tag-cloud-item">
+  <p><a href="fitness-braslety.html">Фитнес-браслеты</a></p>
+  <img src="" alt="Фитнес-браслеты">
+</li>
+<li class="tag-cloud-item">
+  <p><a href="umnie-chasy.html">Умные часы</a></p>
+  <img src="" alt="Умные часы">
+</li>
+<li class="tag-cloud-item">
+  <p><a href="kvadrokoptery.html">Квадрокоптеры</a></p>
+  <img src="" alt="Квадрокоптеры">
+</li>
+</ul>
+</article>
+<section class="advantages">
+  <ul class="advantages-list">
+    <li class="advantages-list-item colored">Доставка</li>
+    <li class="advantages-list-item">Гарантия</li>
+    <li class="advantages-list-item">Кредит</li>
+  </ul>
+  <div class="advantages-item-description">
+    <span class="advantages-item-heading">Доставка</span>
+    <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж.</p>
+    <img src="" alt="доставка">
+  </div>
+  <div class="advantages-item-description">
+    <span class="advantages-item-heading">Гарантия</span>
+    <p>Текст для гарантии</p>
+  </div>
+  <div class="advantages-item-description">
+    <span class="advantages-item-heading">Кредит</span>
+    <p>Текст для кредита</p>
+  </div>
+</section>
+<div class="delivery">
+  <p class="delivery-option">Доставим редкий товар под заказ</p>
+</div>
+<section class="about-us">
+  <h2>О нас</h2>
+<p>Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
+<p>Мы можем доставить ваш товар в самые отдалённые уголки России транспортными компаниями:</p>
+<ul class="about-us-list">
+  <li class="about-us-item">Меловые линии</li>
+  <li class="about-us-item">СДИК</li>
+  <li class="about-us-item">ТоксБерри</li>
+</ul>
+<a class="item-link" href="#">Подробнее</a>
+</section>
+<section class="contacts">
+<h2>Контакты</h2>
+<p>Вы можете забрать товар сами, заехав в наш офис.<br>Заодно сможете проверить работоспособность покупки. </p>
+<span class="contact-heading">Интернет-магазин «Девайс»</span>
+<p>Санкт-Петербург, набережная реки Карповки, 5, литера П.<a href="tel:88128121212">+7 (812) 812-12-12</a></p>
+<span class="contact-heading">Время работы</span>
+<p>пн—пт: с 10:00 до 22:00<br>сб—вс: с 10:00 до 19:00</p>
+<button class="item-link" type="button">Напишите нам</button>
+</section>
+<section class="mailing-list">
+  <h2>Подпишитесь на рассылку</h2>
+  <form class="mailing-list-form" action="https://echo.htmlacademy.ru/" method="post">
+    <input type="text" name="mailing-list-email" placeholder="Ваш e-mail">
+    <button class="button" type="submit">Подписаться</button>
+     </form>
+     <p class="mailing-list-text">Еженедельный дайджест с обзорами новинок, длительными тест-драйвами, распаковками, а также акции, спецпредложения и вот это вот всё.</p>
+<p class="mailing-list-text-free">Это бесплатно</p>
+</section>
+<footer class="page-footer">
+<img class="footer-logo" src="" alt="Логотип интернет-магазина Device">
+<p class="footer-text">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
+<ul class="footer-nav-list">
+  <li class="footer-menu-item">Доставка</li>
+  <li class="footer-menu-item">Гарантия</li>
+  <li class="footer-menu-item">Контакты</li>
+</ul>
+<a class="footer-adress-phone" href="tel:88128121212">Тел.: +7 (812) 812-12-12</a>
+<ul class="footer-social-list">
+  <li class="footer-social-item">
+    <a class="button" href="#">
+      <span class="visually-hidden">Facebook</span>
+    </a>
+  </li>
+  <li class="footer-social-item">
+    <a class="button" href="#">
+      <span class="visually-hidden">Инстаграмм</span>
+    </a>
+  </li>
+  <li class="footer-social-item">
+    <a class="button" href="#">
+      <span class="visually-hidden">Твиттер</span>
+    </a>
+  </li>
+</ul>
+<a class="html-academy-link" href="https://htmlacademy.ru/">
+<img src="" class="html-academy-logo" alt="Логотип HTML Академии">
+</a>
+</footer>
+    </main>
   </body>
 </html>
