Графика для главной страницы

--- a/catalog.html
+++ b/catalog.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Девайс</title>
+    <link rel="stylesheet" href="styles/styles.css">
   </head>
   <body>
     <header class="page-header">
         <a class="navigation-logo" href="index.html">
-        <img class="logo" src="" alt="Логотип интернет-магазина Device">
+        <img class="logo" src="images/logo.svg" width="145" height="36" alt="Логотип интернет-магазина Device">
         </a>
   <nav class="navigation">
     <ul class="navigation-user">
@@ -122,7 +123,7 @@
         <ul class="product-card-list">
             <li class="product-card-list-item">
         <div class="product-card">
-                <img class="product-card-img" src="#" alt="Любительская
+                <img class="product-card-img" src="images/product-1.jpg" width="360" height="380" alt="Любительская
                 селфи-палка">
                 <a class="product-card-link">
                 <h3 class="product-card-title">Любительская
@@ -133,7 +134,7 @@
     </li>
     <li class="product-card-list-item">
         <div class="product-card">
-            <img class="product-card-img" src="#" alt="Профессиональная селфи-палка">
+            <img class="product-card-img" src="images/product-2.jpg" width="360" height="380" alt="Профессиональная селфи-палка">
             <a class="product-card-link">
             <h3 class="product-card-title">Профессиональная селфи-палка</h3>
                 </a>
@@ -142,7 +143,7 @@
 </li>
 <li class="product-card-list-item">
     <div class="product-card">
-        <img class="product-card-img" src="#" alt="Непотопляемая
+        <img class="product-card-img" src="images/product-3.jpg" width="360" height="380" alt="Непотопляемая
         селфи-палка">
         <a class="product-card-link">
         <h3 class="product-card-title">Непотопляемая
@@ -153,7 +154,7 @@
 </li>
 <li class="product-card-list-item">
 <div class="product-card">
-    <img class="product-card-img" src="#" alt="Селфи-палка Следуй за мной">
+    <img class="product-card-img" src="images/product-4.jpg" width="360" height="380" alt="Селфи-палка Следуй за мной">
     <a class="product-card-link">
     <h3 class="product-card-title">Селфи-палка «Следуй за мной»</h3>
         </a>
@@ -222,7 +223,7 @@
         </section>
         </main>
         <footer class="page-footer">
-            <img class="footer-logo" src="" alt="Логотип интернет-магазина Device">
+            <img class="footer-logo" src="images/footer-logo.svg" alt="Логотип интернет-магазина Device">
             <p class="footer-text">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
             <ul class="footer-nav-list">
               <li class="footer-menu-item">Доставка</li>
@@ -248,7 +249,7 @@
               </li>
             </ul>
             <a class="html-academy-link" href="https://htmlacademy.ru/">
-            <img src="" class="html-academy-logo" alt="Логотип HTML Академии">
+                <img src="images/html-logo.svg" width="115" height="33" class="html-academy-logo" alt="Логотип HTML Академии">
             </a>
             </footer>
                 </main>
