Графика для страницы каталога

--- a/catalog.html
+++ b/catalog.html
@@ -248,7 +248,7 @@
                 </a>
               </li>
             </ul>
-            <a class="html-academy-link" href="https://htmlacademy.ru/">
+            <a class="html-academy-link" href="https://htmlacademy.ru/"></a>
                 <img src="images/html-logo.svg" width="115" height="33" class="html-academy-logo" alt="Логотип HTML Академии">
             </a>
             </footer>
