--- a/index.html
+++ b/index.html
@@ -75,14 +75,14 @@
   <ol class="first-banner-description-list">
     <li class="first-banner-description-item">
       <span class="first-banner-number">01</span>
-      <span class="list-item-heading">Порхает как бабочка,
-        жалит как пчела!</span>
-        <p class="first-banner-item-description">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.
+      <span class="list-item-heading">Порхает как бабочка, <br> жалит как пчела!</span>
+        <p class="main-text">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.
         </p>
         <a class="item-link" href="item.html">Подробнее</a>
         <p class="item-advantages"><span class="advantages-number">800 М</span><br>Дальность полета</p>
         <p class="item-advantages"><span class="advantages-number">50 м</span><br>Радиус поражения</p>
     </li>
+    <div class="visually-hidden">
     <li class="first-banner-description-item">
       <span class="first-banner-number">02</span>
       <span class="list-item-heading">Рыбный текст</span>
@@ -99,6 +99,7 @@
         <p class="item-advantages"><span class="advantages-number">800 М</span><br>Дальность полета</p>
         <p class="item-advantages"><span class="advantages-number">50 м</span><br>Радиус поражения</p>
     </li>
+  </div>
   </ol>
   <button class="description-button slider-prev" type="button">
     <span class="visually-hidden">Предыдущий элемент</span>
@@ -112,27 +113,27 @@
 <ul class="tag-cloud-list">
 <li class="tag-cloud-item">
   <p><a class="tag-cloud-item-link" href="virtualnaya-realnost.html">Виртуальная реальность</a></p>
-  <img src="" alt="Очки виртуальной реальности">
+  <img src="images/vr.svg" alt="Очки виртуальной реальности">
 </li>
 <li class="tag-cloud-item">
   <p><a class="tag-cloud-item-link" href="monopody.html">Моноподы для селфи</a></p>
-  <img src="" alt="Моноподы для селфи">
+  <img src="images/monopods.svg" alt="Моноподы для селфи">
 </li>
 <li class="tag-cloud-item">
   <p><a class="tag-cloud-item-link" href="ekshn-kamery.html">Экшн-камеры</a></p>
-  <img src="" alt="Экшн-камеры">
+  <img src="images/action-cameras.svg" alt="Экшн-камеры">
 </li>
 <li class="tag-cloud-item">
   <p><a class="tag-cloud-item-link" href="fitness-braslety.html">Фитнес-браслеты</a></p>
-  <img src="" alt="Фитнес-браслеты">
+  <img src="images/fitness-watches.svg" alt="Фитнес-браслеты">
 </li>
 <li class="tag-cloud-item">
   <p><a class="tag-cloud-item-link" href="umnie-chasy.html">Умные часы</a></p>
-  <img src="" alt="Умные часы">
+  <img src="images/watches.svg" alt="Умные часы">
 </li>
 <li class="tag-cloud-item">
   <p><a class="tag-cloud-item-link" href="kvadrokoptery.html">Квадрокоптеры</a></p>
-  <img src="" alt="Квадрокоптеры">
+  <img src="images/copters.svg" alt="Квадрокоптеры">
 </li>
 </ul>
 </article>
@@ -145,56 +146,60 @@
     <li class="advantages-list-item">Кредит</li>
   </ul>
   <div class="advantages-item-description">
-    <span class="advantages-item-heading">Доставка</span>
-    <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж.</p>
-    <img src="" alt="доставка">
+    <span class="advantages-item-heading main-title">Доставка</span>
+    <p class="advantages-description main-text">Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж.</p>
+    <img src="images/delivery.svg" alt="доставка">
   </div>
   <div class="advantages-item-description">
-    <span class="advantages-item-heading">Гарантия</span>
-    <p>Текст для гарантии</p>
+    <span class="advantages-item-heading visually-hidden">Гарантия</span>
+    <p class="visually-hidden">Текст для гарантии</p>
   </div>
   <div class="advantages-item-description">
-    <span class="advantages-item-heading">Кредит</span>
-    <p>Текст для кредита</p>
+    <span class="advantages-item-heading visually-hidden">Кредит</span>
+    <p class="visually-hidden">Текст для кредита</p>
   </div>
 </section>
 <div class="background">
 <div class="delivery">
+  <div class="delivery-img">
+  <img src="images/delivery-car.svg" width="47" height="31" alt="Доставка любого товара">
+  </div>
   <p class="delivery-option">Доставим редкий товар под заказ</p>
 </div>
 <section class="about-us">
-  <h2>О нас</h2>
-<p>Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
-<p>Мы можем доставить ваш товар в самые отдалённые уголки России транспортными компаниями:</p>
+  <h2 class="main-title">О нас</h2>
+<p class="main-text">Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
+<p class="main-text">Мы можем доставить ваш товар в самые отдалённые уголки России транспортными компаниями:</p>
 <ul class="about-us-list">
   <li class="about-us-item">Меловые линии</li>
   <li class="about-us-item">СДИК</li>
   <li class="about-us-item">ТоксБерри</li>
 </ul>
-<a class="item-link" href="#">Подробнее</a>
+<a class="item-link" href="#">Подробнее о нас</a>
 </section>
 <section class="contacts">
-<h2>Контакты</h2>
-<p>Вы можете забрать товар сами, заехав в наш офис.<br>Заодно сможете проверить работоспособность покупки. </p>
+<h2 class="main-title">Контакты</h2>
+<p class="main-text">Вы можете забрать товар сами, заехав в наш офис.<br>Заодно сможете проверить работоспособность покупки. </p>
 <span class="contact-heading">Интернет-магазин «Девайс»</span>
-<p>Санкт-Петербург, набережная реки Карповки, 5, литера П.<a href="tel:88128121212">+7 (812) 812-12-12</a></p>
+<p class="main-text">Санкт-Петербург, набережная реки Карповки, 5, литера П.<br> <a href="tel:88128121212">+7 (812) 812-12-12</a></p>
 <span class="contact-heading">Время работы</span>
-<p>пн—пт: с 10:00 до 22:00<br>сб—вс: с 10:00 до 19:00</p>
-<button class="item-link" type="button">Напишите нам</button>
+<p class="main-text">пн—пт: с 10:00 до 22:00<br>сб—вс: с 10:00 до 19:00</p>
+<a class="item-link" href="#">Напишите нам</a>
 </section>
 <section class="mailing-list">
 </div>
-  <h2>Подпишитесь на рассылку</h2>
+  <h2 class="mailing-heading">Подпишитесь <br> на рассылку</h2>
   <form class="mailing-list-form" action="https://echo.htmlacademy.ru/" method="post">
     <input type="text" name="mailing-list-email" placeholder="Ваш e-mail">
     <button class="button" type="submit">Подписаться</button>
      </form>
-     <p class="mailing-list-text">Еженедельный дайджест с обзорами новинок, длительными тест-драйвами, распаковками, а также акции, спецпредложения и вот это вот всё.</p>
-<p class="mailing-list-text-free">Это бесплатно</p>
+     <p class="main-text">Еженедельный дайджест с обзорами новинок, длительными тест-драйвами, распаковками, а также акции, спецпредложения и вот это вот всё.</p>
+     <img src="images/check.svg" width="14" height="14">
+<p class="main-text">Это бесплатно</p>
 </section>
 <footer class="page-footer">
 <img class="footer-logo" src="images/footer-logo.svg" width="145" height="36" alt="Логотип интернет-магазина Device">
-<p class="footer-text">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
+<p class="footer-text">Санкт-Петербург, набережная<br> реки Карповки, 5, литера П.</p>
 <ul class="footer-nav-list">
   <li class="footer-menu-item">Доставка</li>
   <li class="footer-menu-item">Гарантия</li>
@@ -204,17 +209,18 @@
 <ul class="footer-social-list">
   <li class="footer-social-item">
     <a class="button" href="#">
-      <span class="visually-hidden">Facebook</span>
+      <span>Facebook</span>
+    </a>
+    
+  </li>
+  <li class="footer-social-item">
+    <a class="button" href="#">
+      <span>Инстаграмм</span>
     </a>
   </li>
   <li class="footer-social-item">
     <a class="button" href="#">
-      <span class="visually-hidden">Инстаграмм</span>
-    </a>
-  </li>
-  <li class="footer-social-item">
-    <a class="button" href="#">
-      <span class="visually-hidden">Твиттер</span>
+      <span>Твиттер</span>
     </a>
   </li>
 </ul>
